content/boundary/v0.14.x/content/docs/commands/host-catalogs/list.mdx
---
layout: docs
page_title: host-catalogs list - Command
description: |-
  The "host-catalogs list" command lists the host catalogs within a given scope or resource.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

# host-catalogs list

Command: `boundary host-catalogs list`

The `boundary host-catalogs list` command lets you list the Boundary host catalogs within a given scope or resource.

## Example

This example lists all host catalogs in the scope `_1234567890`.
The `recursive` option means Boundary runs the operation recursively on any child scopes, if applicable:

```shell-session
$ boundary host-catalogs list -scope-id _1234567890 -recursive
```

## Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary host-catalogs list [options] [args]
```

</CodeBlockConfig>

### Command options

- `-filter=<string>` - If set, Boundary filters the list operation before the results are returned.
The filter operates against each item in the list.
We recommend that you use single quotes, because the filters contain double quotes.
Refer to the [Filter resource listings documentation](/boundary/docs/concepts/filtering/resource-listing) for more details.
- `-recursive` - If set, runs the list operation recursively on any child scopes, if the type supports it.
- `-scope-id=<string>` - The scope from which you want to list host catalogs.
The default scope is `global`.
You can also specify the scope using the **BOUNDARY_SCOPE_ID** environment variable.

@include 'cmd-option-note.mdx'